--- a/memcache.html
+++ b/memcache.html
@@ -38,60 +38,46 @@
     </div>
     <div class="col-sm-3"></div>
   </div>
-  <!--
-  <div class="form-group">
-    <label class="col-sm-3 control-label">每地域副本数</label>
-    <div class="col-sm-5">
-      <div id="btn-copynum" class="btn-group btn-group-sm non-form-elem-lg">
-        <button type="button" id="copynum-1" class="copynum btn btn-default" active>单副本</button>
-        <button type="button" id="copynum-2" class="copynum btn btn-default">两个副本</button>
-        <button type="button" id="copynum-3" class="copynum btn btn-default">三个副本</button>
-      </div>
-    </div>
-    <div class="col-sm-4"></div>
-  </div>
-  -->
-  <input type="hidden" id="copynum" name="copynum" value="1" />
   <div class="form-group">
     <label class="col-sm-3 control-label">Key 的长度</label>
-    <div class="col-sm-6"><div id="slider-keylen" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-keylen" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-key-len" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-key-len" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">Key 的总数</label>
-    <div class="col-sm-6"><div id="slider-keynum" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-keynum" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-key-num" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-key-num" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">Value 的长度</label>
-    <div class="col-sm-6"><div id="slider-vallen" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-vallen" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-val-len" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-val-len" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">单集群读 QPS</label>
-    <div class="col-sm-6"><div id="slider-rqps" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-rqps" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-read-qps" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-read-qps" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">单集群写 QPS</label>
-    <div class="col-sm-6"><div id="slider-wqps" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-wqps" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-write-qps" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-write-qps" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label" style="margin-top: 10px;">总资源量</label>
     <div class="col-sm-6">
       <div class="result">数据量 =
-        (<span id="result-keylen" class="info" data-toggle="tooltip" title="Key的长度"></span> +
-        <span id="result-vallen" class="info" data-toggle="tooltip" title="Value的长度"></span>) *
-        <span id="result-keynum" class="info" data-toggle="tooltip" title="Key的总数"></span> *
-        <span class="result-copynum"></span>副本
+        (<span id="result-key-len" class="info" data-toggle="tooltip" title="Key的长度"></span> +
+        <span id="result-val-len" class="info" data-toggle="tooltip" title="Value的长度"></span>) *
+        <span id="result-key-num" class="info" data-toggle="tooltip" title="Key的总数"></span> *
+        <span class="result-copy-num"></span>副本
         = <span id="data-quantity" class="quantity"></span>
       </div>
       <div class="result">需机器 =
-        max(<span id="result-bymem" class="info" data-toggle="tooltip" title="按内存算需机器 = 数据量 / 40GB每台(64G*60%)"></span>,
-        <span id="result-bycpu" class="info" data-toggle="tooltip" title="按CPU算需机器 = 读写QPS / 4万每台"></span>,
-        <span id="result-bynet" class="info" data-toggle="tooltip" title="按网卡算 = 读写QPS * KV总长度/ 70MB每台"></span>) *
-        <span class="result-copynum"></span>副本
+        max(<span id="result-by-space" class="info" data-toggle="tooltip" title="按内存算需机器 = 数据量 / 40GB每台(64G*60%)"></span>,
+        <span id="result-by-cpu" class="info" data-toggle="tooltip" title="按CPU算需机器 = 读写QPS / 4万每台"></span>,
+        <span id="result-by-net" class="info" data-toggle="tooltip" title="按网卡算 = 读写QPS * KV总长度/ 70MB每台"></span>) *
+        <span class="result-copy-num"></span>副本
         = <span id="server-quantity" class="quantity"></span> 台</div>
     </div>
     <div class="col-sm-3"></div>
