--- a/redis.html
+++ b/redis.html
@@ -47,13 +47,13 @@
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">Key 的长度</label>
-    <div class="col-sm-6"><div id="slider-keylen" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-keylen" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-key-len" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-key-len" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">Key 的总数</label>
-    <div class="col-sm-6"><div id="slider-keynum" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-keynum" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-key-num" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-key-num" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">Value 数据类型</label>
@@ -69,51 +69,51 @@
     <div class="col-sm-3"></div>
   </div>
   <div class="form-group" style="display:none">
-    <label id="label-itemnum" class="col-sm-3 control-label">Item 的个数</label>
-    <div class="col-sm-6"><div id="slider-itemnum" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-itemnum" class="slider-ui info" data-toggle="tooltip" title="Item个数：value里包含的item平均个数"></div></div>
+    <label id="label-item-num" class="col-sm-3 control-label">Item 的个数</label>
+    <div class="col-sm-6"><div id="slider-item-num" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-item-num" class="slider-ui info" data-toggle="tooltip" title="Item个数：value里包含的item平均个数"></div></div>
   </div>
   <div class="form-group">
-    <label id="label-itemlen" class="col-sm-3 control-label">Value 的长度</label>
-    <div class="col-sm-6"><div id="slider-itemlen" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-itemlen" class="slider-ui info" data-toggle="tooltip" title="Item长度：value里包含的item平均大小"></div></div>
+    <label id="label-item-len" class="col-sm-3 control-label">Value 的长度</label>
+    <div class="col-sm-6"><div id="slider-item-len" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-item-len" class="slider-ui info" data-toggle="tooltip" title="Item长度：value里包含的item平均大小"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">单集群读 QPS</label>
-    <div class="col-sm-2"><div id="slider-rbat" class="non-form-elem"></div></div>
-    <div class="col-sm-1"><div id="slider-ui-rbat" class="slider-ui info" data-toggle="tooltip" title="读批量个数：一个请求里的平均key个数"></div></div>
-    <div class="col-sm-3"><div id="slider-rqps" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-rqps" class="slider-ui"></div></div>
+    <div class="col-sm-2"><div id="slider-read-bat" class="non-form-elem"></div></div>
+    <div class="col-sm-1"><div id="slider-ui-read-bat" class="slider-ui info" data-toggle="tooltip" title="读批量个数：一个请求里的平均key个数"></div></div>
+    <div class="col-sm-3"><div id="slider-read-qps" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-read-qps" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">单集群写 QPS</label>
-    <div class="col-sm-2"><div id="slider-wbat" class="non-form-elem"></div></div>
-    <div class="col-sm-1"><div id="slider-ui-wbat" class="slider-ui info" data-toggle="tooltip" title="写批量个数：一个请求里的平均key个数"></div></div>
-    <div class="col-sm-3"><div id="slider-wqps" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-wqps" class="slider-ui"></div></div>
+    <div class="col-sm-2"><div id="slider-write-bat" class="non-form-elem"></div></div>
+    <div class="col-sm-1"><div id="slider-ui-write-bat" class="slider-ui info" data-toggle="tooltip" title="写批量个数：一个请求里的平均key个数"></div></div>
+    <div class="col-sm-3"><div id="slider-write-qps" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-write-qps" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label" style="margin-top: 10px;">总资源量</label>
     <div class="col-sm-9">
       <div class="result">
         数据量 =
-        ( <span id="result-keylen" class="info" data-toggle="tooltip" title="Key的长度"></span> +
+        ( <span id="result-key-len" class="info" data-toggle="tooltip" title="Key的长度"></span> +
         <span id="result-value-multi-item">
-          (<span id="result-itemlen" class="info" data-toggle="tooltip" title="Item的平均长度"></span> +
-          <span id="result-itemextra" class="info" data-toggle="tooltip" title="Item的额外开销"></span>) *
-          <span id="result-itemnum" class="info" data-toggle="tooltip" title="一个Value里Item的个数"></span>
+          (<span id="result-item-len" class="info" data-toggle="tooltip" title="Item的平均长度"></span> +
+          <span id="result-item-overhead" class="info" data-toggle="tooltip" title="Item的额外开销"></span>) *
+          <span id="result-item-num" class="info" data-toggle="tooltip" title="一个Value里Item的个数"></span>
         </span>
         <span id="result-value-single-item" class="info" data-toggle="tooltip" title="Value的平均长度"></span> +
-        <span id="result-valextra" class="info" data-toggle="tooltip" title="Value的额外开销"></span>
-        ) * <span id="result-keynum" class="info" data-toggle="tooltip" title="Key的个数"></span> *
-        <span class="result-copynum"></span>副本 *
+        <span id="result-value-overhead" class="info" data-toggle="tooltip" title="Value的额外开销"></span>
+        ) * <span id="result-key-num" class="info" data-toggle="tooltip" title="Key的个数"></span> *
+        <span class="result-copy-num"></span>副本 *
         <span class="info" data-toggle="tooltip" title="jemalloc的额外开销">115%</span> =
         <span id="data-quantity" class="quantity"></span></div>
       <div class="result">需机器 =
-        max(<span id="result-bymem" class="info" data-toggle="tooltip" title="按内存算需机器 = 数据量 / 40GB每台(64G*60%)"></span>,
-        <span id="result-bycpu" class="info" data-toggle="tooltip" title="按CPU算需机器 = 读写QPS / 4万每台"></span>,
-        <span id="result-bynet" class="info" data-toggle="tooltip" title="按网卡算 = 读写QPS * KV总长度/ 70MB每台"></span>) *
-        <span class="result-copynum"></span>副本
+        max(<span id="result-by-space" class="info" data-toggle="tooltip" title="按内存算需机器 = 数据量 / 40GB每台(64G*60%)"></span>,
+        <span id="result-by-cpu" class="info" data-toggle="tooltip" title="按CPU算需机器 = 读写QPS / 4万每台"></span>,
+        <span id="result-by-net" class="info" data-toggle="tooltip" title="按网卡算 = 读写QPS * KV总长度/ 70MB每台"></span>) *
+        <span class="result-copy-num"></span>副本
         = <span id="server-quantity" class="quantity"></span> 台</div>
     </div>
   </div>
