--- a/memcache.html
+++ b/memcache.html
@@ -50,8 +50,8 @@
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">Value 的长度</label>
-    <div class="col-sm-6"><div id="slider-val-len" class="non-form-elem"></div></div>
-    <div class="col-sm-3"><div id="slider-ui-val-len" class="slider-ui"></div></div>
+    <div class="col-sm-6"><div id="slider-value-len" class="non-form-elem"></div></div>
+    <div class="col-sm-3"><div id="slider-ui-value-len" class="slider-ui"></div></div>
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">单集群读 QPS</label>
@@ -68,7 +68,7 @@
     <div class="col-sm-6">
       <div class="result">数据量 =
         (<span id="result-key-len" class="info" data-toggle="tooltip" title="Key的长度"></span> +
-        <span id="result-val-len" class="info" data-toggle="tooltip" title="Value的长度"></span>) *
+        <span id="result-value-len" class="info" data-toggle="tooltip" title="Value的长度"></span>) *
         <span id="result-key-num" class="info" data-toggle="tooltip" title="Key的总数"></span> *
         <span class="result-copy-num"></span>副本
         = <span id="data-quantity" class="quantity"></span>
