Unify memcache widgets dataChange event

--- a/memcache.html
+++ b/memcache.html
@@ -31,9 +31,9 @@
     </label>
     <div class="col-sm-6">
       <div class="btn-group btn-group-sm non-form-elem-lg" data-toggle="buttons">
-        <label class="btn btn-default region active"><input class="checkbox-region" idcs="2" type="checkbox" include="yes">北京(2副本)</label>
-        <label class="btn btn-default region"><input class="checkbox-region" idcs="1" type="checkbox">南京(1副本)</label>
-        <label class="btn btn-default region"><input class="checkbox-region" idcs="1" type="checkbox">杭州(1副本)</label>
+        <label id="region-bj" class="btn btn-default region"><input type="checkbox">北京(2副本)</label>
+        <label id="region-nj" class="btn btn-default region"><input type="checkbox">南京(1副本)</label>
+        <label id="region-hz" class="btn btn-default region"><input type="checkbox">杭州(1副本)</label>
       </div>
     </div>
     <div class="col-sm-3"></div>
