Unify redis widgets dataChange event

--- a/redis.html
+++ b/redis.html
@@ -29,17 +29,17 @@
     <label class="col-sm-3 control-label">部署副本数</label>
     <div class="col-sm-6">
       <div class="btn-group btn-group-sm non-form-elem-lg" data-toggle="buttons">
-        <label id="region-beijing" class="region">
+        <label id="region-bj" class="region">
           <span class="region-desc">北京</span>
-          <input class="region-input" id="region-spinner-bj" disabled="disabled" value="2" />
+          <input class="region-spinner" id="region-spinner-bj" />
         </label>
-        <label id="region-nanjing" class="region">
+        <label id="region-nj" class="region">
           <span class="region-desc">南京</span>
-          <input class="region-input" id="region-spinner-nj" disabled="disabled" value="0" />
+          <input class="region-spinner" id="region-spinner-nj" />
         </label>
-        <label id="region-hangzhou" class="region">
+        <label id="region-hz" class="region">
           <span class="region-desc">杭州</span>
-          <input class="region-input" id="region-spinner-hz" disabled="disabled" value="0" />
+          <input class="region-spinner" id="region-spinner-hz" />
         </label>
       </div>
     </div>
@@ -59,11 +59,11 @@
     <label class="col-sm-3 control-label">Value 数据类型</label>
     <div class="col-sm-6">
       <div class="btn-group btn-group-sm non-form-elem-lg" data-toggle="buttons">
-        <label class="btn btn-default value-type active" id="value-type-string" value-type="string"><input type="radio" checked>String</label>
-        <label class="btn btn-default value-type" id="value-type-hash" value-type="hash"><input type="radio">Hash</label>
-        <label class="btn btn-default value-type" id="value-type-list" value-type="list"><input type="radio">List</label>
-        <label class="btn btn-default value-type" id="value-type-set" value-type="set"><input type="radio">Set</label>
-		<label class="btn btn-default value-type" id="value-type-sorted-set" value-type="sorted-set"><input type="radio">Sorted Set</label>
+        <label class="btn btn-default value-type active" id="value-type-string"><input type="radio" checked>String</label>
+        <label class="btn btn-default value-type" id="value-type-hash"><input type="radio">Hash</label>
+        <label class="btn btn-default value-type" id="value-type-list"><input type="radio">List</label>
+        <label class="btn btn-default value-type" id="value-type-set"><input type="radio">Set</label>
+		<label class="btn btn-default value-type" id="value-type-sorted-set"><input type="radio">Sorted Set</label>
       </div>
     </div>
     <div class="col-sm-3"></div>
