--- a/redis.html
+++ b/redis.html
@@ -123,7 +123,9 @@
   </div>
   <div class="form-group">
     <label class="col-sm-3 control-label">购物车</label>
-    <div id="container-cart" class="col-sm-7 non-form-elem-lg"></div>
+	<div id="container-cart" class="col-sm-7 non-form-elem-lg">
+      <div id="text-empty-cart" class="non-form-elem-lg">购物车暂时为空。</div>
+    </div>
     <div class="col-sm-2"></div>
   </div>
   <div class="form-group">
