Add gutter cost

--- a/memcache.html
+++ b/memcache.html
@@ -70,6 +70,7 @@
         (<span id="result-key-len" class="info" data-toggle="tooltip" title="Key的长度"></span> +
         <span id="result-value-len" class="info" data-toggle="tooltip" title="Value的长度"></span>) *
         <span id="result-key-num" class="info" data-toggle="tooltip" title="Key的总数"></span> *
+        <span id="result-gutter" class="info" data-toggle="tooltip" title="Gutter 的额外消耗。Gutter 是用于单机故障时秒级恢复的备用单元，占集群总量的 10%">110%</span> *
         <span id="result-space-copy-num"></span>副本
         = <span id="result-space" class="quantity"></span>
       </div>
